# Miaki

./: .gitignore  Interlectural Property Notices.txt  LICENSE  Makefile  README.md  app.xml  build.sh  index.lua  make_appinfo.bat  memdump_license  miaki.kdev4  step2.lua  step3.lua
.github/workflows/: miaki.yml
.kdev4/: miaki.kdev4
DevMode/: Makefile  devmode.c  exports.yml
app/: CEX2REX  CEX2REX.velf  CEX2REX.vpk.out  CEX2REX.vpk_param.sfo  CMakeCache.txt  CMakeLists.txt  MIAKI  MIAKI.velf  MIAKI.vpk  MIAKI.vpk.out  MIAKI.vpk_param.sfo  Makefile  app.info  cmake_install.cmake  eboot.bin.out  kernel.skprx  pstvConfig.txt  testkit_pstv.skprx  testkit_vita.skprx  vitaConfig.txt
app/sce_sys/livearea/contents/: template.xml
app/src/: debugScreen.h  debugScreenFont.c  main.c  miaki_user.h  pup.c  pup.h
app/src/include/: .fuse_hidden0000348200000004  activation.h  boot_parameters.h  debugScreen.h  debugsettings.h  deeper.h  edition.h  flasher.c  flasher.h  idu.h  modules.c  modules.h  qaf.h  ui.h  utils.c  utils.h
app/src/include/compat/: cex2rex.c  cex2rex.h  config.c  config.h  idu.c
app/src/include/flasher/: boot.c  boot.h  config.c  config.h
app/src/include/menu/: activation.c  activation.h  boot_parameters.c  boot_parameters.h  edition.c  edition.h
app/src/include/ui/: ui.c  ui.h
app/src/source/: flasher.c  modules.c  utils.c
app/src/source/compat/: cex2rex.c  config.c  idu.c
app/src/source/flasher/: boot.c  config.c
app/src/source/menu/: activation.c  boot_parameters.c  debugsettings.c  deeper.c  edition.c  qaf.c
app/src/source/ui/: ui.c
deeper-spoofer/: CMakeLists.txt  exports.yml  spoofer  spoofer.c
devmode/: CMakeLists.txt  Makefile  devmode  devmode-stubs.yml  devmode.c
devmode/devmode-stubs/: Makefile
kernel/: CMakeCache.txt  CMakeLists.txt  Makefile  cex2rex_kern.velf  cmake_install.cmake  exports.yml  install_manifest.txt  miaki_kern  stubs.yml
kernel/src/: cex2rex_kern.h  main.c  miaki_kern.h  power.h  spkg.c  spkg.h
kernel/stubs/: Cex2Rex_Kern_kC2R_kDecryptSpkgFile.S  Cex2Rex_Kern_kC2R_kDecryptSpkgFile.wo  (+9 more)
kmspico/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exports.yml  kmspico  kmspico.skprx.out  kmspico.velf  stubs.yml
sce_sys/: param.sfo
spoofer/: Makefile
spoofer_pstv/: Makefile  kDump.elf  kDump.velf  mmu_dump.c
spoofer_vita/: Makefile  kDump.elf  kDump.velf  mmu_dump.c
spoofer_vita_test/: README.md
user/: CMakeCache.txt  CMakeLists.txt  Makefile  cex2rex_user.velf  cmake_install.cmake  exports.yml  install_manifest.txt  miaki_user  stubs.yml  user.suprx.out
(+41 files in other folders)
